<resources>
    <string name="app_name">OnBoarding</string>
    <string name="subtitle1">Lorem ipsum bla is a free text space between us oh yeah this is my boy</string>
    <string name="get_started">Get Started</string>
    <string name="logo">logo</string>
    <string name="cargando">cargando</string>
    <string name="audifonos">Audífonos</string>
    <string name="marcas">Marcas</string>
    <string name="descripcion">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vitae massa lobortis nulla fringilla commodo. In dui arcu, porttitor a commodo condimentum, hendrerit quis diam. Aliquam vestibulum elit congue</string>
    <string name="portada_de_audifonos">portada de audifonos</string>
    <string name="monitores">Monitores</string>
    <string name="aorus_ad27qd_580">Aorus AD27QD 580$</string>
    <string name="msi_optix_g241_280">MSI Optix G241 280$</string>
    <string name="gigabyte_m27q_400">Gigabyte M27Q 400$</string>
    <string name="portada_de_monitor">monitor</string>
    <string name="componentes">Componentes</string>
    <string name="perifericos">Periféricos</string>
    <string name="imagen_de_tarjetas_graficas">imagen de tarjetas graficas</string>
    <string name="imagen_de_procesadores">imagen de procesadores</string>
    <string name="imagen_de_monitores">imagen de monitores</string>
    <string name="imagen_de_audifonos">imagen de audifonos</string>
    <string name="procesadores">Procesadores</string>
    <string name="ryzen_5_5600x_580">Ryzen 5 5600X 580$</string>
    <string name="intel_i5_11600k_280">Intel i5 11600K 280$</string>
    <string name="ryzen_9_5950x_400">Ryzen 9 5950X 400$</string>
    <string name="portada_de_procesadores">portada de procesadores</string>
    <string name="tarjetas_graficas">Tarjetas gráficas</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_integer_vitae_massa_lobortis_nulla_fringilla_commodo_in_dui_arcu_porttitor_a_commodo_condimentum_hendrerit_quis_diam_aliquam_vestibulum_elit_congue">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vitae massa lobortis nulla fringilla commodo. In dui arcu, porttitor a commodo condimentum, hendrerit quis diam. Aliquam vestibulum elit congue</string>
    <string name="portada_de_tarjetas_graficas">portada de tarjetas graficas</string>
    <string name="anuncio_de_nvdia">anuncio de NVDIA</string>
    <string name="anuncio">anuncio</string>
    <string name="fragment_de_inicio">fragment de inicio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imgen_del_monitor">imgen del monitor</string>
    <string name="descripcion_bose">Ahora, el mundo será su sala de conferencias. Los audífonos con cancelación de ruido Bose 700 UC lo equipan para una mejor colaboración en el lugar de trabajo y otros entornos: cubículos, oficinas abiertas, oficinas y muchos sitios más.</string>
    <string name="descripcion_sony">Descubre cómo los audífonos WH-1000XM4 combinan nuestro noise cancelling más avanzado con una calidad de sonido excepcional y una serie de funciones inteligentes para disfrutar de una experiencia de audio inigualable.</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_eiusmod_tempor_incidunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquid_ex_ea_commodi_consequat">lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_eiusmod_tempor_incidunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquid_ex_ea_commodi_consequat</string>
    <string name="s_280_00">S/ 280.00</string>
    <string name="imagen_de_monitor_msi">imagen de monitor msi</string>
    <string name="s_580_00">S/ 580.00</string>
    <string name="imagen_de_monitor_aorus">imagen de monitor aorus</string>
    <string name="gigabyte_m27q">Gigabyte M27Q</string>
    <string name="s_350_00">S/ 350.00</string>
    <string name="imagen_de_monitor_gigabyte">imagen de monitor gigabyte</string>
    <string name="skullcandy_hesh_3">Skullcandy Hesh 3</string>
    <string name="s_120_00">S/ 120.00</string>
    <string name="imagen_de_audifono_skullcandy">imagen de audifono skullcandy</string>
    <string name="bose_700uc">Bose 700Uc</string>
    <string name="sony_wh1000xm4">Sony WH1000XM4</string>
    <string name="sony_wh_1000xm4">Sony WH-1000XM4</string>
    <string name="imagen_de_audifono_sony">imagen de audifono sony</string>
    <string name="s_530_00">S/ 530.00</string>
    <string name="imagen_de_audifono_bose">imagen de audifono bose</string>
    <string name="nvidia_gtx_1660">Nvidia GTX 1660</string>
    <string name="imagen_de_nvidia_gtx_1660">imagen de nvidia gtx 1660</string>
    <string name="nvidia_rtx_3080">Nvidia RTX 3080</string>
    <string name="imagen_de_nvidia_rtx_3080">imagen de nvidia rtx 3080</string>
    <string name="radeon_rx_6700_xt">Radeon RX 6700 XT</string>
    <string name="imagen_de_radeon_rx_6700_xt">imagen de radeon rx 6700 xt</string>
    <string name="ryzen5_5600x">Ryzen5 5600X</string>
    <string name="imagen_de_un_procesador_ryzen">imagen de un procesador ryzen</string>
    <string name="intel_i5_11600k">Intel i5 11600K</string>
    <string name="imagen_de_un_procesador_intel">imagen de un procesador intel</string>
    <string name="s_400_00">S/ 400.00</string>
    <string name="ryzen_9_5950x">Ryzen 9 5950X</string>
    <string name="productos">Productos</string>
    <string name="xiaomi_mi_11_ultra">Xiaomi Mi 11 Ultra</string>
    <string name="redmi_note_10_pro">Redmi Note 10 pro</string>
    <string name="xiaomi_mi_9t">Xiaomi mi 9T</string>
    <string name="xiaomi">xiaomi</string>
    <string name="imagen_de_celular_xiaomi">imagen de celular xiaomi</string>
    <string name="aorus_ad27qd">Aorus AD27QD</string>
    <string name="msi_optix_g241">MSI Optix G241</string>
    <string name="aplicaciones_productivas">Aplicaciones productivas</string>
    <string name="celulares">Celulares</string>
    <string name="modelos">Modelos</string>
    <string name="comenzar">Comenzar</string>
    <string name="iphone_8_plus">Iphone 8 Plus</string>
    <string name="imagen_de_iphone">imagen de iphone</string>
    <string name="iphone_12_pro_max">Iphone 12 Pro Max</string>
    <string name="iphone_x">Iphone X</string>
    <string name="iphone">Iphone</string>
    <string name="title_activity_mi_bolsillo">MiBolsilloActivity</string>
    <string name="tab_reporte">Reporte</string>
    <string name="tab_registro">Registro</string>
    <string name="tab_ingresos">Ingresos</string>
    <string name="tab_gastos">Gastos</string>
</resources>