<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    tools:context=".ProcesadoresActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="212dp"
                android:background="@color/background_app"
                android:contentDescription="@string/portada_de_procesadores"
                app:srcCompat="@drawable/imagen_fondo_procesador" />

            <TextView
                android:id="@+id/tvTitulo"
                android:layout_width="224dp"
                android:layout_height="67dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/telex"
                android:gravity="center"
                android:text="@string/procesadores"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="15dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/btnPBoton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ryzen5_5600x" />

                <RadioButton
                    android:id="@+id/btnPBoton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/intel_i5_11600k" />

                <RadioButton
                    android:id="@+id/btnPBoton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ryzen_9_5950x" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/llContenerdoProcesadores"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="vertical"></LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>