<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout10"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_tarjetas.TarjetaNvidia1660Fragment">

    <Button
        android:id="@+id/button10"
        android:layout_width="162dp"
        android:layout_height="56dp"
        android:layout_margin="33dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/boton_amarillo"
        android:text="@string/s_580_00"
        app:layout_constraintEnd_toEndOf="@+id/textView27"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="349dp"
        android:layout_height="144dp"
        android:layout_margin="20dp"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_eiusmod_tempor_incidunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquid_ex_ea_commodi_consequat"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView11"
        app:layout_constraintStart_toStartOf="@+id/imageView11"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="210dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:background="#48FFD146"
        android:fontFamily="@font/telex"
        android:padding="10dp"
        android:text="@string/nvidia_gtx_1660"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="290dp"
        android:layout_height="211dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imagen_de_nvidia_gtx_1660"
        android:scaleType="centerCrop"
        android:src="@drawable/nvidia_gtx_1660"
        app:layout_constraintEnd_toEndOf="@+id/textView25"
        app:layout_constraintStart_toStartOf="@+id/textView25"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

</androidx.constraintlayout.widget.ConstraintLayout>